@@ -46,9 +46,7 @@
 #include <math.h>
 #include <getopt.h>
 
-#ifdef HAVE_INTTYPES_H
-  #include <inttypes.h>
-#endif
+#include <inttypes.h>
 
 #include "paths.h"
 #include INC_X11(Intrinsic.h)
